# parallelize

./: .gitignore  README.md  noxfile.py  pyproject.toml
basicParallelize/: _helpers.py  _parallelize.py  _parallelizeTQDM.py
src/basicParallelize/: __init__.py  _helpers.py  _parallelize.py  _parallelizeTQDM.py
tests/: testParallelize.py  test_parallelize.py
