[project]
name = "basicParallelize"
version = "1.1.1"
authors = [
  { name="Joshua Beale", email="jbeale2023@gmail.com" },
]
description = "Wrappers for multiprocessing's Pool and ThreadPool classes."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]
keywords = ["parallel"]
dependencies = [
    "tqdm>=2.0.0"
]
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/jBeale23/parallelize"

[tool.bumpversion]
current_version = "1.1.1"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"

[[tool.bumpversion.files]]
filename = "./src/basicParallelize/__init__.py"
